--- a/birthday_wish/index.html
+++ b/birthday_wish/index.html
@@ -9,6 +9,9 @@
 	<div class="first" id="first">	
 		<h1>Welcome To Aryan's Website</h1>
 	</div>
+	<div id="aryan">
+		<img src="images/aryan.jpg">
+	</div>
 	<div class="second" id="second">
 		<div class="form">
 				<h2>Enter Your Name</h2>
@@ -23,12 +26,22 @@
 			<h1 id="rname"></h1>
 		</div>
 		<div class="rtext">
-			<h2>I Wish You A Very Happy Birthday........</h2>
-			<h3>May God Bless You ...</h3>
-			<h4>Enjoy .... This is Your Day...</h4>
-		</div>
+			<div class="firstimage">
+				<div>
+					<h3 id="rwish1"></h3>
+				</div>
+			</div>
+			<div class="secondimage">
+				<div>
+					<h3 id="rwish2"></h3>
+				</div>
+			</div>
 
-	</div>
+		</div>
+		<footer>
+			<h4>This site is designed by : Mr. Aryan Gupta in 27 july 2020.</h4>
+	</footer>
+</div>
 
 
 
