Revert "Update index.html"
This reverts commit fc0b9c5526c6987a9bd4e227476a2e7e8c935093.

--- a/birthday_wish/index.html
+++ b/birthday_wish/index.html
@@ -6,7 +6,7 @@
 	<script type="text/javascript" src="javascript.js"></script>
 </head>
 <body>
-	<div class="first" id="first">
+	<div class="first" id="first">	
 		<h1>Welcome To Aryan's Website</h1>
 	</div>
 	<div id="aryan">
@@ -39,7 +39,7 @@
 
 		</div>
 		<footer>
-			<h4>This site is designed by : Mr. Aryan Gupta on 27 july 2020.</h4>
+			<h4>This site is designed by : Mr. Aryan Gupta in 27 july 2020.</h4>
 	</footer>
 </div>
 
