--- a/birthday_wish/index.html
+++ b/birthday_wish/index.html
@@ -10,7 +10,8 @@
 		<h1>Welcome To Aryan's Website</h1>
 	</div>
 	<div id="aryan">
-		<img src="images/aryan.jpg">
+		<img src="images/aryan.jpg"><br><br>
+		<a class="botlink" href="bot.html">Click here to talk with my assistant</a>
 	</div>
 	<div class="second" id="second">
 		<div class="form">
