--- a/birthday_wish/index.html
+++ b/birthday_wish/index.html
@@ -11,7 +11,7 @@
 	</div>
 	<div id="aryan">
 		<img src="images/aryan.jpg"><br><br>
-		<a class="botlink" href="bot.html">Click here to talk with my assistant</a>
+		<a onclick="wish()" class="botlink" href="bot.html">Click here to talk with my assistant</a>
 	</div>
 	<div class="second" id="second">
 		<div class="form">
